# Rattrapage-promo-2027

./: CMakeLists.txt  README.md  Readme.md  conanfile.txt
client/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
client/include/: AudioStream.hpp  NetworkClient.hpp  OpusCodec.hpp  RingBuffer.hpp
client/src/: AudioStream.cpp  NetworkClient.cpp  OpusCodec.cpp  main_client.cpp
server/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
server/include/: ClientSession.hpp  Server.hpp
server/src/: ClientSession.cpp  Server.cpp  main_server.cpp
